<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/ingredient_tv"
        style="@style/IngredientList"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/quantity_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/measure_tv"
        app:layout_constraintTop_toTopOf="@+id/quantity_tv"
        tools:text="@string/tools_ingredient" />

    <TextView
        android:id="@+id/quantity_tv"
        style="@style/IngredientList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/tools_quantity" />

    <TextView
        android:id="@+id/measure_tv"
        style="@style/IngredientList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/quantity_tv"
        app:layout_constraintStart_toEndOf="@+id/quantity_tv"
        app:layout_constraintTop_toTopOf="@+id/quantity_tv"
        tools:text="@string/tools_measure" />
</androidx.constraintlayout.widget.ConstraintLayout>